# ext4fs-rs

./: Cargo.toml  README.md
src/: codec.rs  constants.rs  descriptor.rs  entry.rs  errors.rs  extent.rs  file.rs  fs.rs  inode.rs  lib.rs  metadata.rs  read_dir.rs  superblock.rs  utils.rs
testdata/: test.ext4
