[package]
name = "ext4fs"
version = "0.1.0"
edition = "2021"
authors = ["yybit <yybit2@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/yybit/ext4fs-rs"
repository = "https://github.com/yybit/ext4fs-rs"
description = "Rust implementation of ext4 file system used in user space"
readme = "README.md"
include = ["**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
byteorder = "1.5.0"

serde = { version = "1.0.194", features = ["derive"] }
serde-big-array = "0.5.1"
bincode = "1.3.3"